# PCL_ICP

./: CMakeLists.txt  README.md  requirements.txt
include/: incremental_registration.h  pcd_filter.cpp  pcd_icp.cpp  pcd_read.cpp  pipeline.h
pcds/: 0000000000.pcd  0000000001.pcd  0000000100.pcd  0000000101.pcd  0000000200.pcd  0000000201.pcd  0000000300.pcd  0000000301.pcd  0000000400.pcd  0000000401.pcd  0000000500.pcd  0000000501.pcd  1.pcd  35.pcd  result_refine_icp.pcd  result_rough_alignment.pcd  traj_odometry.ply
src/: CMakeLists.txt  incremental_registration.cpp  main.cpp  pcd_icp_io.cpp  pcd_io.cpp  pipeline.cpp  pipeline.h
